Add Unit Testing and Integration Testing

--- a/Kalkulator/nbproject/project.properties
+++ b/Kalkulator/nbproject/project.properties
@@ -31,9 +31,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Kalkulator.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.junit-4.13.jar=C:\\Users\\USER\\Downloads\\junit-4.13.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.junit-4.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
